added additional document indexing and versioning
Now use Azure AI search to store the chunk text and embedding, supports up to 1000 chunks per query to support full document retrieval and search against entire user's index or specifically against a document, with versioning we can compare versions of documents or recover documents.
